SigmaCodebackup3rdSep/objects/Budget__c.object
<CustomObject>
    <description>Related to budget for financial year on amount or product</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Related whether the budget in active or not</description>
        <inlineHelpText>Uncheck if the budget is still not active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <defaultValue>&apos;Not Applicable&apos;</defaultValue>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_Achieved_Percent__c</fullName>
        <formula>1 - ( Budget_Amount__c  -  Total_Achieved_Amount__c ) / Budget_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Achieved (Percent)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Budget_Amount__c</fullName>
        <label>Planned Budget Amount</label>
        <summarizedField>Budget_Items__c.Amount__c</summarizedField>
        <summaryForeignKey>Budget_Items__c.Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Budget_Name__c</fullName>
        <label>Budget Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Type__c</fullName>
        <label>Budget Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Budget - Delivery</fullName>
                </value>
                <value>
                    <fullName>Budget - Purchase</fullName>
                </value>
                <value>
                    <fullName>Sales Target</fullName>
                    <label>Budget - Sales</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FY_End_Date__c</fullName>
        <description>Related to end date of the financial year</description>
        <inlineHelpText>Select end date of the financial year</inlineHelpText>
        <label>FY End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FY_Start_Date__c</fullName>
        <description>Related to start date of the financial year</description>
        <inlineHelpText>Select the start date of the financial year</inlineHelpText>
        <label>FY Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Year__c</fullName>
        <description>Related to the financial year</description>
        <inlineHelpText>Select the financial year of the budget</inlineHelpText>
        <label>Financial Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2018-19</fullName>
                </value>
                <value>
                    <fullName>2019-20</fullName>
                </value>
                <value>
                    <fullName>2020-21</fullName>
                </value>
                <value>
                    <fullName>2021-22</fullName>
                </value>
                <value>
                    <fullName>2022-23</fullName>
                </value>
                <value>
                    <fullName>2023-24</fullName>
                </value>
                <value>
                    <fullName>2024-25</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <description>Related to business group</description>
        <inlineHelpText>Choose the business group</inlineHelpText>
        <label>Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Operation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Related to business region</description>
        <inlineHelpText>Select the region</inlineHelpText>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Response Resource</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Achieved_Amount__c</fullName>
        <formula>Total_Expenditure_on_Projects__c  +  Total_Purchase_Budget_Achieved__c  +  Total_Sales_Budget_Achieved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Achieved Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Expenditure_on_Projects__c</fullName>
        <label>Total Expenditure on Projects</label>
        <summarizedField>Budget_Items__c.Total_Amount_Project__c</summarizedField>
        <summaryForeignKey>Budget_Items__c.Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Purchase_Budget_Achieved__c</fullName>
        <label>Total Purchase Budget Achieved</label>
        <summarizedField>Budget_Items__c.Total_Purchased_Amount__c</summarizedField>
        <summaryForeignKey>Budget_Items__c.Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Sales_Budget_Achieved__c</fullName>
        <label>Total Sales Budget Achieved</label>
        <summarizedField>Budget_Items__c.Total_Sold_Amount__c</summarizedField>
        <summaryForeignKey>Budget_Items__c.Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Budget</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Budget_Type__c</columns>
        <columns>Financial_Year__c</columns>
        <columns>FY_Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BG-{00000}</displayFormat>
        <label>Budget ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>